5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1578_1331.log
== SUBMITION (2019-03-12 23:53:05) 
-- CODE:
print(50//3)
-- EXECUTION TIME:
0.21733
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:53:38) 
-- CODE:
print(150//3)
-- EXECUTION TIME:
0.153224
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:53:45) 
-- CODE:
print(50//50)
-- EXECUTION TIME:
0.169918
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:55:27) 
-- CODE:
print(50)
print(50)
-- EXECUTION TIME:
0.158616
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
50
50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:56:04) 
-- CODE:
print(150//3)
print(50%)
-- EXECUTION TIME:
0.14171
-- ERROR:
  File "/home/codebench/codes/1578/1331/main.py", line 2
    print(50%)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:57:32) 
-- CODE:
print(50%)
-- EXECUTION TIME:
0.229444
-- ERROR:
  File "/home/codebench/codes/1578/1331/main.py", line 1
    print(50%)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:57:44) 
-- CODE:
print(50)
print()
-- EXECUTION TIME:
0.164299
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:57:49) 
-- CODE:
print(50)

-- EXECUTION TIME:
0.177881
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:59:02) 
-- CODE:
print(16)
print(2)

-- EXECUTION TIME:
0.181319
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 00:00:06) 
-- CODE:
print(16)
print(2)
-- EXECUTION TIME:
0.128659
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:27:10) 
-- CODE:
print(16)
print(2)
-- EXECUTION TIME:
0.184979
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:46:30) 
-- CODE:
print(16)
print(2)
-- EXECUTION TIME:
0.169778
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 02:57:44) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 02:57:54) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.2253
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
